--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ author:
   googlescholar    : "https://scholar.google.fr/citations?user=lrE00SAAAAAJ&hl=en"
   inspire-hep      : # URL
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : # "http://orcid.org/yourorcidurl"
   semantic         : # URL
   pubmed           : # URL
   researchgate     : "https://www.researchgate.net/profile/Abdul-Karim-Gizzini?ev=hdr_xprf"
