--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   location         : "Paris"
   employer         : "Uni"
   uri              : # URL
-  email            : "abdulkarimgizzini@gmail.com" 
+  email            : # "abdulkarimgizzini@gmail.com" 
 
   # Academic websites
   academia         : # URL
