--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Associate Professor"
   location         : "Paris"
-  employer         : "Uni"
+  employer         : "Université Paris-Est Créteil"
   uri              : # URL
   email            : # "abdulkarimgizzini@gmail.com" 
 
