Add 'Submitted Works' category to publication list

--- a/_config.yml
+++ b/_config.yml
@@ -80,6 +80,8 @@ author:
 
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
+  manuscripts_submitted:
+    title: 'Submitted Works'
   books:
     title: 'Books'
   manuscripts:
